--- a/chewy/src/main/webapp/css/mypage/profile.css
+++ b/chewy/src/main/webapp/css/mypage/profile.css
@@ -3,9 +3,71 @@
 	    padding: 0 20px;
 	}
 }
+
+
+element.style {
+@media (max-width: 969px)
+.sub-nav a {
+    font-size: 14px;
+	}
+}
 div {
     display: block;
 }
+
+.main-content {
+    font-size: 10px;
+    padding-bottom: 40px;
+}
+
+#container {
+    z-index: 200;
+}
+
+.bd-account .account-section {
+    background: #fcfcfc;
+    padding-top: 7rem;
+    padding-bottom: 3rem;
+}
+
+.sub-nav li {
+    display: inline-block;
+    padding: 8px 2px;
+    white-space: nowrap;
+}
+
+.sub-nav a {
+    display: block;
+    color: #333;
+    padding: 8px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    transition: all .2s ease-out;
+    line-height: 1;
+}
+
+
+
+
+
+
+
+element.style {
+    display: flex;
+}
+
+.sub-nav ul {
+    text-align: center;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    width: auto;
+    min-width: 0;
+}
+
+
+
 
 h1 {
     font-size: 3.6rem;
