--- a/chewy/src/main/webapp/css/account/overview.css
+++ b/chewy/src/main/webapp/css/account/overview.css
@@ -4,8 +4,30 @@ main {
     display: block;
 }
 
+main .overview_main {
+	min-width: 750px;
+    max-width: 1400px;
+    margin: auto;
+    width: 100%;
+    transition: width .2s ease-out;
+    padding-top: 2rem;
+}
+
 .account_navi {
 	z-index: 200;
+}
+.overview_top > h1{
+	font-size: 3.5rem;
+	padding: 0 15px;
+    margin: 0 0 30px;
+}
+
+.overview_top > p{
+	text-transform: none;
+    color: #666;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 10px 0 15px;
 }
 
 .account_navi_wrap {
@@ -39,4 +61,39 @@ main {
 .account_navi_list:before, .a_main:before, .overview_main .main_wrap .overview_mid:before, .overview_main .main_wrap .overview_mid:after {
    	content: "";
     display: table;
+}
+
+.orders_main .main_wrap .order_mid:after {
+	clear: both;
+}
+
+.account_navi_list>li {
+    margin: 0 0.8rem 0 0;
+    display: inline-block;
+    padding: 8px 2px;
+    white-space: nowrap;
+}
+
+.account_navi_list>li>a {
+	font-size: 16px;
+	display: block;
+    color: #333;
+    padding: 8px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    transition: all .2s ease-out;
+    line-height: 1;
+}
+
+.account_navi_list .autoship>a {
+	background: #0e70be;
+    color: #fff;
+    border-color: #0e70be;
+    cursor: default;
+    
+}
+
+.account_navi_list .other>a:hover {
+	border: 1px solid #0e70be;
+	color: #0e70be;
 }
