--- a/chewy/src/main/webapp/css/login/login.css
+++ b/chewy/src/main/webapp/css/login/login.css
@@ -36,20 +36,6 @@ form {
 }
 
 
-
-@media ( min-width : 40em) {
-	h1 {
-		font-size: 3.6rem;
-		line-height: 1.1111111111;
-		margin-top: -0.25em;
-		margin-bottom: 0.8333333333em;
-		padding-top: 1.1111111111em;
-		font-weight: 300;
-		color: #333;
-		border: none;
-	}
-}
-
 h1 {
 	font-size: 2.4rem;
 	line-height: 1.25;
@@ -60,6 +46,7 @@ h1 {
 	color: #333;
 	border: none;
 }
+
 
 .newCustomer, .returningCustomer {
 	float: left;
@@ -84,6 +71,7 @@ h1 {
 	margin: 5px 0 15px;
 	padding: 0;
 	line-height: 1em;
+	font-weight: bold;
 }
 
 fieldset, img {
@@ -116,6 +104,14 @@ ol, ul {
 		margin-bottom: 1.25em;
 	}
 }
+
+.returningCustomer #forgotPassword {
+    font-size: 0.8rem;
+    font-weight: 400;
+    text-align: right;
+    line-height: 2em;
+}
+
 
 .returningCustomer li {
 	margin: 0 0 10px;
@@ -243,15 +239,15 @@ input[type=date], input[type=email], input[type=password], input[type=tel],
 	cursor: pointer;
 	line-height: 1;
 	font-family: Roboto, Franklin Gothic Medium, Tahoma, sans-serif;
-	font-size: 1.8rem;
+	font-size: 1.3rem;
 	font-weight: 400;
 	text-align: center;
 	text-decoration: none;
 	white-space: nowrap;
-	padding: 1.4rem 3.5rem;
+	padding: 1rem 1.5rem;
 	margin-right: 1.5rem;
 	outline: none;
-	border: 0.1rem solid transparent;
+/* 	border: 0.1rem soAlid transparent; */
 	border-radius: 4px;
 	transition: all, .4s, ease-out;
 	box-sizing: border-box;
