--- a/chewy/src/main/webapp/css/main/dog5.css
+++ b/chewy/src/main/webapp/css/main/dog5.css
@@ -1,9 +1,7 @@
-/* @media (min-width: 768px) and (max-width: 1249px) { */
 	.dept__banner {
     background: #ffcc42 url(//cms-www.chewy.com/contentAsset/raw-data/99f3690f-ca5f-4101-b752-5e003522958e/mediumImage/43246945-9af5-4c92-9051-e80618536394) no-repeat 50%;
 	}	
 	
-/* } */
 	
 .dept__banner {
     position: relative;
@@ -149,7 +147,7 @@
     display: inline-block;
     vertical-align: middle;
     border-left: 1px solid #ddd;
-    background: url(https://www.chewy.com/assets/img/icons/arrow-right-blue.svg) no-repeat 100%;
+    background: url(/assets/img/icons/arrow-right-blue.svg) no-repeat 100%;
     background-size: 6px 10px;
 }
 
@@ -168,11 +166,10 @@
 
 .dept-slider .bx-controls-direction .bx-next {
     float: right;
-    right: -6rem;
 }
 
 .bx-controls-direction .bx-next {
-    background-image: url(https://www.chewy.com/assets/img/icons/arrow-right-blue.png);
+    background-image: url(	https://www.chewy.com/assets/img/icons/arrow-right-blue.png);
     background-position: 12px;
     background-repeat: no-repeat;
     background-size: 10px;
@@ -192,7 +189,6 @@
 
 .dept-slider .bx-controls-direction .bx-prev {
     float: left;
-/*     left: -3rem; */
 }
 
 .bx-controls-direction .bx-prev.disabled, .bx-controls-direction .bx-prev.disabled:hover {
@@ -261,7 +257,7 @@
     display: block;
 }
 .dept-slider li a {
-/*     display: block; */
+    display: block;
     padding: 10px;
     min-height: 240px;
     border-radius: 5px;
@@ -536,8 +532,6 @@ a {
     position: relative;
 }
 
-
-
 @media (min-width: 970px) {
 	.dept-sidebar li:after {
 	    left: 237px;
@@ -564,19 +558,8 @@ a {
     transition: opacity .15s ease-out;
 }
 
-.dept-sidebar--active .dept__popover:before {
-    content: "";
-    display: block;
-    width: 15px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 100%;
-}
-
-
 .dept__popover__img {
-    width: 50%;
+    width: 60%;
     display: inline-block;
     vertical-align: top;
     margin: 0 0 0 -4px;
@@ -610,12 +593,6 @@ fieldset, img {
     overflow: inherit;
 }
 
-.dept-sidebar li.dept-sidebar--active .dept__popover, .dept-sidebar li:hover .dept__popover {
-    visibility: visible;
-    opacity: 1;
-    z-index: 98;
-}
-
 .dept-sidebar>ul>li {
     margin: 0;
     border-bottom: 1px solid #ccc;
@@ -627,11 +604,13 @@ fieldset, img {
 }
 
 
+
+
 @media (min-width: 769px) {
 	
 	.dept-sidebar>ul>li:hover>a {
 	    color: #0e70be;
-	    background-image: url(https://www.chewy.com/assets/img/icons/arrow-right-grey.svg);
+	    background-image: url(/assets/img/icons/arrow-right-blue.svg);
 	}
 }
 
@@ -644,120 +623,9 @@ fieldset, img {
 	}
 	
 }
-
-.bx-wrapper .bx-controls-direction a {
-    /* position: absolute; */
-    top: 50%;
-    margin-top: -140px;
-    outline: 0;
-    width: 35px;
-    height: 35px;
-    text-indent: -9999px;
-    z-index: 9999;
-}
-
-
-
-
-.show-more--description.description-bottom {
-    padding: 50px 0 0;
-    border-top: 1px solid #ddd;
-}
-.show-more--description {
-    margin: 0.8rem 0;
-}
-.show-more--description {
-    margin: 0.8rem .98%;
-    padding: 20px;
-    position: relative;
-}
-
-
-.show-more--description h2, .show-more--description h3 {
-    padding-top: 0;
-    color: #333;
-    font-size: 2.5rem;
-    font-weight: 200;
-    margin: 0 0 10px;
-}
-
-.show-more--description .show-more-wrapper {
-    height: 106px;
-    transition: all .3s ease-out;
-    overflow: hidden;
-}
-
-.show-more--description p, .show-more--description p a {
-    color: #555;
-}
-.show-more--description p {
-    font-size: 1.1rem;
-    font-weight: 200;
-    line-height: 1.6em;
-    text-align: left;
-    text-transform: none;
-}
-
-.show-more--description .overlay {
-    height: 55px;
-    width: 100%;
-    background: linear-gradient(180deg,rgba(252,251,252,0),#fcfbfc);
-    position: absolute;
-    bottom: 47px;
-}
-
-
-.show-more--description .show-more {
-    font-size: 16px;
-    text-decoration: none;
-    display: table;
-    margin-top: 22px;
-}
-
-.show-more--description a {
-    text-decoration: underline;
-}
-
-
-.show-more {
-    margin-bottom: 2rem;
-}
-a, a:hover {
-    color: #0e70be;
-}
-a {
-    text-decoration: none;
-    background-color: transparent;
-    -webkit-text-decoration-skip: objects;
-}
-
-
-.show-more--description .show-more img {
-    width: 25px;
-    height: 26px;
-    margin-right: 6px;
-    -webkit-transform: none;
-    transform: none;
-}
-
-.show-more--description .show-more img, .show-more--description .show-more span {
-    display: table-cell;
-    vertical-align: middle;
-}
-.dept-slider img {
-    display: block;
-    max-height: 100%;
-    max-width: 100%;
-    width: auto;
-    height: auto;
-    margin: 0 auto;
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-.show-more--description .show-more img, .show-more--description .show-more span {
-    display: table-cell;
-    vertical-align: middle;
+.dept-sidebar>ul>li>a {
+    padding: 18px 10px;
+    background-image: url(/assets/img/icons/arrow-right-grey.svg);
+    background-repeat: no-repeat;
+    background-size: 8px 13px;
 }
