--- a/chewy/src/main/webapp/css/account/overview.css
+++ b/chewy/src/main/webapp/css/account/overview.css
@@ -132,7 +132,7 @@ li{
 
 .overview_wrap{
 	display: grid;
-    grid-template-rows: 0fr 1fr 1fr;
+    grid-template-rows: 0fr 1fr 3fr;
 }
 .overview_bottom > header > h2{
 	padding: 0rem;
@@ -242,20 +242,87 @@ li{
 }
 
 
-.my-pets-empty {
-    height: 26rem;
-    width: 100%;
-    margin: 0 auto;
-    white-space: normal;
+main .mypets_main {
+    height: 35vh;
+    transition: width .2s ease-out;
+    padding-top: 2rem;
+    display: flex;
 }
 
+.mypets_left {
+    background-image: url(../../images/account/myPet.jpg);
+    background-size: cover;
+    
+}
 
+.mypets_left, .mypets_right {
+	flex: 1 1;
+	height: auto;
+}
 
+.mypets_right {
+	margin-top: 0;
+	align-self: center;
+    text-align: center;
+}
 
+.mypets_main .mypets_right .right_wrap .pet_btn_wrap {
+    padding-right: 1.6rem;
+    padding-left: 1.6rem;
+}
 
+.pet_btn_wrap>button {
+    margin-bottom: 1.6rem;
+    align-items: center;
+    appearance: none;
+    background-color: #1c49c2;
+    border: 0;
+    border-radius: 2.4rem;
+    box-shadow: inset 0 0 0 0.2rem;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: Poppins,Noto Sans,Franklin Gothic Medium,Tahoma,sans-serif;
+    font-size: 1.4rem;
+    font-weight: 700;
+    height: 4.8rem;
+    justify-content: center;
+    letter-spacing: .02em;
+    line-height: 2rem;
+    padding-left: 4.8rem;
+    padding-right: 4.8rem;
+    position: relative;
+    text-decoration: none;
+    touch-action: manipulation;
+    transform: translate(0);
+    user-select: none;
+    width: 100%;
+}
 
+.pet_btn_wrap>button:after {
+    border: 0.2rem solid #1c49c2;
+    border-radius: 2.8rem;
+    bottom: -0.4rem;
+    color: inherit;
+    content: "";
+    left: -0.4rem;
+    opacity: 0;
+    position: absolute;
+    right: -0.4rem;
+    top: -0.4rem;
+    transition: opacity .1s ease-out;
+    z-index: -1;
+}
 
+.pet_btn_wrap>button>span {
+	font-size: 1.4rem;
+}
 
+.mypet_font{
+	font-size:1.4rem;
+}
 
-
-
+.mypet_h5{
+	font-size:2.4rem;
+	font-weight: 700;
+}
